--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.application.name=web-service
 
+server.servlet.context-path=/homey-park/api/v1
+
 # Database
 spring.datasource.url=jdbc:postgresql://localhost:5432/homey-park
 spring.datasource.username=postgres
 spring.datasource.password=root
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
