fix: change profiles typo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.application.name=web-service
 server.port=8080
 #server.servlet.context-path=/homey-park/api/v1
 
-spring.profile.active=mysql
+spring.profiles.active=mysql
